WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
274858
WebCore::ScopedInspectorShaderProgramHighlight constructor does not initialize struct m_savedBlend
https://bugs.webkit.org/show_bug.cgi?id=274858
Summary
WebCore::ScopedInspectorShaderProgramHighlight constructor does not initializ...
David Kilzer (:ddkilzer)
Reported
2024-05-29 13:37:53 PDT
WebCore::ScopedInspectorShaderProgramHighlight constructor does not initialize struct m_savedBlend. Regressed in: Fix InspectorScopedShaderProgramHighlight for indexed blend state
https://bugs.webkit.org/show_bug.cgi?id=241463
<
rdar://problem/95292922
> <
https://commits.webkit.org/251634@main
> ```diff struct { - RefPtr<Float32Array> color; - unsigned equationRGB { 0 }; - unsigned equationAlpha { 0 }; - unsigned srcRGB { 0 }; - unsigned srcAlpha { 0 }; - unsigned dstRGB { 0 }; - unsigned dstAlpha { 0 }; - bool enabled { false }; + GCGLfloat color[4]; + GCGLenum equationRGB; + GCGLenum equationAlpha; + GCGLenum srcRGB; + GCGLenum dstRGB; + GCGLenum srcAlpha; + GCGLenum dstAlpha; + GCGLboolean enabled; } m_savedBlend; ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-29 13:38:13 PDT
<
rdar://problem/128962006
>
David Kilzer (:ddkilzer)
Comment 2
2024-05-29 13:41:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29245
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug