Cherry-pick 279549@main (e39e0c613f32). https://bugs.webkit.org/show_bug.cgi?id=274858

WebCore::ScopedInspectorShaderProgramHighlight constructor does not initialize struct m_savedBlend
    <https://bugs.webkit.org/show_bug.cgi?id=274858>
    <rdar://128962006>

    Reviewed by Dan Glastonbury.

    * Source/WebCore/html/canvas/WebGLUtilities.h:
    (WebCore::ScopedInspectorShaderProgramHighlight::m_savedBlend):
    - Add default initializers.

    Canonical link: https://commits.webkit.org/279549@main

Canonical link: https://commits.webkit.org/274313.299@webkitglib/2.44